Update README to demonstrate reflowing

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,10 @@
 ---
 output: 
   rmarkdown::github_document:
-    html_preview: false
+    html_preview: true
     fig_width: 4
     fig_height: 4
+    toc: true
 ---
 
 ```{r, echo = FALSE}
@@ -30,7 +31,7 @@ library(devtools)
 install_github('wilkox/ggfittext')
 ```
 
-# Walkthrough
+# Fitting text to a box
 
 Sometimes you want to draw some text in ggplot2 so that it doesn't spill
 outside a bounding box. For example, this doesn't look very good:
@@ -72,6 +73,8 @@ ggplot(flyers, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
 Text can be placed in any corner or at the midpoint of any side (‘topleft’,
 ‘top’, ‘topright’, ‘right’…), as well as the default ‘centre’.
 
+# Growing text
+
 With the `grow = T` argument, text will be grown as well as shrunk to fit the
 box:
 
@@ -80,4 +83,59 @@ ggplot(flyers, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
                    vehicle, fill = class)) +
   geom_rect() +
   geom_fit_text(grow = T)
+```
+
+# Reflowing text
+
+The `reflow = T` argument causes text to be reflowed (wrapped) as needed to fit
+the bounding box. Reflowing is preferred to shrinking; that is, if the text can
+be made to fit by reflowing it without shrinking it, it will be.
+
+```{r reflow}
+poem <- data.frame(
+  text = rep("Whose text this is I think I know.\nHe would prefer it to reflow",
+             3),
+  xmin = rep(10, 3),
+  xmax = rep(90, 3),
+  ymin = rep(10, 3),
+  ymax = rep(90, 3),
+  fit = c("geom_text", "no reflow", "reflow")
+)
+ggplot(poem, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
+                 text)) +
+  geom_rect() +
+  geom_text(data = subset(poem, fit == "geom_text"), aes(x = (xmin + xmax) / 2,
+                                                         y = (ymin + ymax) / 2)) +
+  geom_fit_text(data = subset(poem, fit == "no reflow"), min.size = 0) +
+  geom_fit_text(data = subset(poem, fit == "reflow"), reflow = T, min.size = 0) +
+  lims(x = c(0, 100), y = c(0, 100)) +
+  labs(x = "", y = "") +
+  facet_wrap(~ fit)
+```
+
+Note that existing line breaks in the text are respected.
+
+If both `reflow = T` and `grow = T` are passed, the text will be reflowed to
+a form that best matches the aspect ratio of the bounding box, then grown to fit
+the box.
+
+```{r reflow_and_grow}
+film <- data.frame(
+  text = rep("duck soup", 3),
+  xmin = rep(30, 3),
+  xmax = rep(70, 3),
+  ymin = rep(0, 3),
+  ymax = rep(100, 3),
+  fit = c("geom_text", "grow, no reflow", "grow and reflow")
+)
+ggplot(film, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
+                 text)) +
+  geom_rect() +
+  geom_text(data = subset(film, fit == "geom_text"), aes(x = (xmin + xmax) / 2,
+                                                         y = (ymin + ymax) / 2)) +
+  geom_fit_text(data = subset(film, fit == "grow, no reflow"), grow = T) +
+  geom_fit_text(data = subset(film, fit == "grow and reflow"), grow = T, reflow = T) +
+  lims(x = c(0, 100), y = c(0, 100)) +
+  labs(x = "", y = "") +
+  facet_wrap(~ fit, ncol = 1)
 ```
