--- a/README.Rmd
+++ b/README.Rmd
@@ -32,31 +32,30 @@ install_github('wilkox/ggfittext')
 
 # Fitting text to a box
 
-Sometimes you want to draw some text in ggplot2 so that it doesn't spill
-outside a bounding box. For example, this doesn't look very good:
+Sometimes you want to draw some text in ggplot2 so that it doesn't spill outside
+a bounding box. ggfittext provides a geom called `geom_fit_text` that will
+shrink text (when needed) to fit a bounding box.
 
 ```{r doesnt_fit}
 library(ggfittext)
 flyers <- data.frame(
-  vehicle = c("cessna", "jumbo jet", "space shuttle", "dyson sphere"),
-  xmin = c(45, 40, 25, 10),
-  xmax = c(55, 60, 75, 90),
-  ymin = c(5, 35, 65, 95),
-  ymax = c(25, 55, 85, 115)
+  vehicle = rep(c("kite", "jumbo jet", "space shuttle", "dyson sphere"), 2),
+  xmin = rep(c(52.5, 45, 30, 0), 2),
+  xmax = rep(c(67.5, 75, 90, 120), 2),
+  ymin = rep(c(0, 15, 35, 60), 2),
+  ymax = rep(c(10, 30, 55, 85), 2),
+  geom = factor(c(rep("geom_text", 4), rep("geom_fit_text", 4)),
+                levels = c("geom_text", "geom_fit_text"))
 )
-ggplot(flyers) +
-  geom_rect(aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax)) +
-  geom_text(aes(label = vehicle, x = (xmin + xmax) / 2, y = (ymin + ymax) / 2))
-```
-
-ggfittext provides a geom called `geom_fit_text` that will shrink text (when
-needed) to fit a bounding box.
-
-```{r geom_fit_text}
-ggplot(flyers, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
-                   label = vehicle)) +
+ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax)) +
   geom_rect() +
-  geom_fit_text()
+  geom_text(
+    data = subset(flyers, geom == "geom_text"),
+    aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)
+  ) +
+  geom_fit_text(data = subset(flyers, geom == "geom_fit_text")) +
+  facet_wrap( ~ geom) +
+  labs(x = "", y = "")
 ```
 
 You can define the box with ‘xmin’ and ‘xmax’ aesthetics, or alternatively with
@@ -69,10 +68,19 @@ minimum size for the text with `min.size`. (Any text that would need to be
 smaller than `min.size` to fit the box will be hidden.)
 
 ```{r geom_fit_text_2}
-ggplot(flyers, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
-                   label = vehicle)) +
+ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax)) +
   geom_rect() +
-  geom_fit_text(place = "topleft", min.size = 8)
+  geom_text(
+    data = subset(flyers, geom == "geom_text"),
+    aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)
+  ) +
+  geom_fit_text(
+    data = subset(flyers, geom == "geom_fit_text"),
+    place = "top",
+    min.size = 6
+  ) +
+  facet_wrap( ~ geom) +
+  labs(x = "", y = "")
 ```
 
 Text can be placed in any corner or at the midpoint of any side (‘topleft’,
@@ -84,10 +92,18 @@ With the `grow = TRUE` argument, text will be grown as well as shrunk to fit the
 box:
 
 ```{r geom_fit_text_3}
-ggplot(flyers, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
-                   label = vehicle)) +
+ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax)) +
   geom_rect() +
-  geom_fit_text(grow = TRUE)
+  geom_text(
+    data = subset(flyers, geom == "geom_text"),
+    aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)
+  ) +
+  geom_fit_text(
+    data = subset(flyers, geom == "geom_fit_text"),
+    grow = T
+  ) +
+  facet_wrap( ~ geom, ncol = 1) +
+  labs(x = "", y = "")
 ```
 
 # Reflowing text
@@ -99,14 +115,14 @@ be made to fit by reflowing it without shrinking it, it will be reflowed only.
 ```{r reflow}
 poem <- data.frame(
   text = rep(
-    "Whose text this is I think I know.\nHe would prefer it to reflow",
+    "Whose words these are I think I know.\nHe would prefer that they reflow",
     3
   ),
   xmin = rep(10, 3),
   xmax = rep(90, 3),
   ymin = rep(10, 3),
   ymax = rep(90, 3),
-  fit = c("geom_text", "no reflow", "reflow")
+  fit = c("geom_text", "without reflow", "with reflow")
 )
 ggplot(poem, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
                  label = text)) +
@@ -115,8 +131,8 @@ ggplot(poem, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
     data = subset(poem, fit == "geom_text"),
     aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)
   ) +
-  geom_fit_text(data = subset(poem, fit == "no reflow"), min.size = 0) +
-  geom_fit_text(data = subset(poem, fit == "reflow"), reflow = TRUE, min.size = 0) +
+  geom_fit_text(data = subset(poem, fit == "without reflow"), min.size = 0) +
+  geom_fit_text(data = subset(poem, fit == "with reflow"), reflow = TRUE, min.size = 0) +
   lims(x = c(0, 100), y = c(0, 100)) +
   labs(x = "", y = "") +
   facet_wrap(~ fit)
@@ -135,7 +151,7 @@ film <- data.frame(
   xmax = rep(70, 3),
   ymin = rep(0, 3),
   ymax = rep(100, 3),
-  fit = c("geom_text", "grow, no reflow", "grow and reflow")
+  fit = c("geom_text", "grow without reflow", "grow with reflow")
 )
 ggplot(film, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
                  label = text)) +
@@ -144,9 +160,9 @@ ggplot(film, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
     data = subset(film, fit == "geom_text"),
     aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)
   ) +
-  geom_fit_text(data = subset(film, fit == "grow, no reflow"), grow = TRUE) +
+  geom_fit_text(data = subset(film, fit == "grow without reflow"), grow = TRUE) +
   geom_fit_text(
-    data = subset(film, fit == "grow and reflow"),
+    data = subset(film, fit == "grow with reflow"),
     grow = TRUE,
     reflow = TRUE
   ) +
