--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 [![Travis-CI Build Status](https://travis-ci.org/wilkox/ggfittext.svg?branch=master)](https://travis-ci.org/wilkox/ggfittext)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ggfittext)](https://cran.r-project.org/package=ggfittext)
 
-**ggfittext provides a ggplot2 geom for fitting text inside a box**
+**'ggfittext' provides a 'ggplot2' geom for fitting text inside a box**
 
 ```{r hero, echo = FALSE, message = FALSE}
 yeats <- data.frame(
@@ -38,7 +38,7 @@ ggplot(yeats, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
 
 # Installation
 
-Install the release version of ggfittext from CRAN:
+Install the release version of 'ggfittext' from CRAN:
 
 ```{r eval = FALSE}
 install.packages("ggfittext")
@@ -52,17 +52,17 @@ devtools::install_github('wilkox/ggfittext')
 
 # Fitting text inside a box
 
-Sometimes you want to draw some text in a ggplot2 plot so that it fits inside a
+Sometimes you want to draw some text in a 'ggplot2' plot so that it fits inside a
 defined area. For example, you might want to label tiles in a heat map without
 letting the labels spill over into other tiles; or you might want to constrain
 some point labels to imaginary boxes so they don't get too big. It's possible
 to achieve this by manually fiddling with the text size, but this is both
 tedious and un-reproducible.
 
-ggfittext provides a special geom called `geom_fit_text()` that automates
+'ggfittext' provides a special geom called `geom_fit_text()` that automates
 fitting text inside a box. It works more or less like `ggplot2::geom_text()`,
-but provides some additional aesthetics and options that let you specify the
-box in which the text is to fit and how to make it fit.
+but provides some additional aesthetics and options that let you specify the box
+in which the text is to fit and how to make it fit.
 
 ```{r doesnt_fit}
 library(ggplot2)
