--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -11,7 +11,7 @@ vignette: >
 
 # Fitting text inside a box
 
-Sometimes you want to draw some text in a ‘ggplot2’ plot so that it fits inside a
+Sometimes you want to draw some text in a 'ggplot2' plot so that it fits inside a
 defined area. For example, you might want to label tiles in a heat map without
 letting the labels spill over into other tiles; or you might want to constrain
 some point labels to imaginary boxes so they don't get too big. It's possible
@@ -47,10 +47,10 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-You can define the width of the box with either ‘xmin’ and ‘xmax’ aesthetics,
-or alternatively with ‘x’ (for the horizontal centre of the box) and ‘width’
-(in millimetres). Likewise, you can use either ‘ymin’ and ‘ymax’ or ‘y’ and
-‘height’. The ‘x/width’ and ‘y/height’ aesthetics can be useful when using a
+You can define the width of the box with either `xmin` and `xmax` aesthetics,
+or alternatively with `x` (for the horizontal centre of the box) and `width`
+(in millimetres). Likewise, you can use either `ymin` and `ymax` or `y` and
+`height`. The `x/width` and `y/height` aesthetics can be useful when using a
 discrete axis.
 
 You can specify where in the box to place the text with the `place` argument,
@@ -69,8 +69,8 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-Text can be placed in any corner (‘topleft’, ‘topright’, …) or at the midpoint
-of any side (‘bottom’, ‘left’, …), as well as the default ‘centre’.
+Text can be placed in any corner (`topleft`, `topright`, ...) or at the
+midpoint of any side (`bottom`, `left`, ...), as well as the default `centre`.
 
 # Growing text
 
