--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -49,9 +49,10 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
 
 You can define the width of the box with either `xmin` and `xmax` aesthetics,
 or alternatively with `x` (for the horizontal centre of the box) and a `width`
-argument (a `grid::unit()` object, defaulting to 40 mm). Likewise, you can use
-either `ymin` and `ymax` or `y` and `height`. The `x` and `y` aesthetics can be
-useful when using a discrete axis.
+argument (either a numeric, expressed in the native x axis unit, or a
+`grid::unit()` object; defaults to 40 mm). Likewise, you can use either `ymin`
+and `ymax` or `y` and `height`. The `x` and `y` aesthetics can be useful when
+using a discrete axis.
 
 You can specify where in the box to place the text with the `place` argument,
 and a minimum point size for the text with the `min.size` argument. (Any text
