Add pkgdown site

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,9 @@ knitr::opts_chunk$set(
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ggfittext)](https://cran.r-project.org/package=ggfittext)
 [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 
-**'ggfittext' provides a 'ggplot2' geom for fitting text inside a box**
+# ggfittext
+
+ggfittext provides a ggplot2 geom for fitting text inside a box
 
 ```{r hero, echo = FALSE, message = FALSE}
 yeats <- data.frame(
@@ -37,9 +39,9 @@ ggplot(yeats, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
   geom_fit_text(grow = T, min.size = 0)
 ```
 
-# Installation
+## Installation
 
-Install the release version of 'ggfittext' from CRAN:
+Install the release version of ggfittext from CRAN:
 
 ```{r eval = FALSE}
 install.packages("ggfittext")
@@ -51,16 +53,16 @@ If you want the development version, install it from GitHub:
 devtools::install_github("wilkox/ggfittext")
 ```
 
-# Fitting text inside a box
+## Fitting text inside a box
 
-Sometimes you want to draw some text in a 'ggplot2' plot so that it fits inside a
+Sometimes you want to draw some text in a ggplot2 plot so that it fits inside a
 defined area. For example, you might want to label tiles in a heat map without
 letting the labels spill over into other tiles; or you might want to constrain
 some point labels to imaginary boxes so they don't get too big. It's possible
 to achieve this by manually fiddling with the text size, but this is both
 tedious and un-reproducible.
 
-'ggfittext' provides a special geom called `geom_fit_text()` that automates
+ggfittext provides a special geom called `geom_fit_text()` that automates
 fitting text inside a box. It works more or less like `ggplot2::geom_text()`,
 but provides some additional aesthetics and options that let you specify the box
 in which the text is to fit and how to make it fit.
@@ -130,7 +132,7 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-# Reflowing text
+## Reflowing text
 
 With the `reflow = TRUE` argument, text will be reflowed (wrapped) as needed to
 fit the box. Reflowing is preferred to shrinking; that is, if the text can be
@@ -198,7 +200,7 @@ ggplot(film, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
   facet_wrap(~ fit, ncol = 1)
 ```
 
-# Example: a heatmap
+## Example: a heatmap
 
 ```{r heatmap, fig.width = 8}
 tournament <- data.frame(
