--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -4,12 +4,12 @@ author: "David Wilkins"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to 'ggfittext'}
+  %\VignetteIndexEntry{Introduction to ggfittext}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-# Fitting text inside a box
+## Fitting text inside a box
 
 Sometimes you want to draw some text in a 'ggplot2' plot so that it fits inside a
 defined area. For example, you might want to label tiles in a heat map without
@@ -49,10 +49,9 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
 
 You can define the width of the box with either `xmin` and `xmax` aesthetics,
 or alternatively with `x` (for the horizontal centre of the box) and a `width`
-argument (either a numeric, expressed in the native x axis unit, or a
-`grid::unit()` object; defaults to 40 mm). Likewise, you can use either `ymin`
-and `ymax` or `y` and `height`. The `x` and `y` aesthetics can be useful when
-using a discrete axis.
+argument (a `grid::unit()` object, defaulting to 40 mm). Likewise, you can use
+either `ymin` and `ymax` or `y` and `height`. The `x` and `y` aesthetics can be
+useful when using a discrete axis.
 
 You can specify where in the box to place the text with the `place` argument,
 and a minimum point size for the text with the `min.size` argument. (Any text
@@ -70,8 +69,8 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-Text can be placed in any corner (`topleft`, `topright`, ...) or at the
-midpoint of any side (`bottom`, `left`, ...), as well as the default `centre`.
+Text can be placed in any corner ('topleft', 'topright', ...) or at the midpoint
+of any side ('bottom', 'left', ...), as well as the default 'centre'.
 
 # Growing text
 
@@ -89,7 +88,7 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-# Reflowing text
+## Reflowing text
 
 With the `reflow = TRUE` argument, text will be reflowed (wrapped) as needed to
 fit the box. Reflowing is preferred to shrinking; that is, if the text can be
@@ -157,9 +156,9 @@ ggplot(film, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax,
   facet_wrap(~ fit, ncol = 1)
 ```
 
-# Example: a heatmap
+## Example: a heatmap
 
-```{r heatmap, fig.width = 7}
+```{r heatmap, fig.width = 8}
 tournament <- data.frame(
   teamA = rep(c("Radon Canyon Raiders", "Desert Bluffs Destroyers",
                 "Old Town Orphans"), 3),
@@ -176,6 +175,6 @@ tournament <- data.frame(
 ggplot(tournament, aes(x = teamA, y = teamB, fill = game_time_mins,
                        label = venue)) +
   geom_tile() +
-  geom_fit_text(width = grid::unit(30, "mm"), height = grid::unit(15, "mm"), 
+  geom_fit_text(width = grid::unit(35, "mm"), height = grid::unit(25, "mm"), 
                 min.size = 0, reflow = T, grow = T, colour = "white")
 ```
