--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ library(ggfittext)
 ggplot(yeats, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
                   label)) +
   geom_rect(colour = "black") +
-  geom_fit_text(grow = T, min.size = 0)
+  geom_fit_text(grow = TRUE, min.size = 0)
 ```
 
 ## Installation
@@ -91,11 +91,19 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   labs(x = "", y = "")
 ```
 
-You can define the width of the box with either `xmin` and `xmax` aesthetics,
-or alternatively with `x` (for the horizontal centre of the box) and a `width`
-argument (a `grid::unit()` object, defaulting to 40 mm). Likewise, you can use
-either `ymin` and `ymax` or `y` and `height`. The `x` and `y` aesthetics can be
-useful when using a discrete axis.
+There are three different ways to define the box in which you want the text to
+be placed:
+
+1. On a continuous axis, you can use `xmin`/`xmax` and/or `ymin`/`ymax`
+   aesthetics.
+2. Alternatively on a continuous axis, you can define the horizontal and/or
+   vertical centre of the box with `x` and/or `y` respectively, and fix the
+   width and/or height of the box with the `width` and/or `height` arguments.
+   The values for `width` and `height` should be `grid::unit()` objects; if
+   not, they will be assumed to use the native axis scale.
+3. On a discrete (categorical) axis, `geom_fit_text()` will automatically
+   figure out the appropriate width or height. You can override this with the
+   `width` or `height` arguments if you want.
 
 You can specify where in the box to place the text with the `place` argument,
 and a minimum point size for the text with the `min.size` argument. (Any text
@@ -127,7 +135,7 @@ ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
   geom_rect() +
   geom_text(data = subset(flyers, geom == "geom_text"),
             aes(x = (xmin + xmax) / 2, y = (ymin + ymax) / 2)) +
-  geom_fit_text(data = subset(flyers, geom == "geom_fit_text"), grow = T) +
+  geom_fit_text(data = subset(flyers, geom == "geom_fit_text"), grow = TRUE) +
   facet_wrap( ~ geom, ncol = 1) +
   labs(x = "", y = "")
 ```
@@ -212,13 +220,12 @@ tournament <- data.frame(
   venue = sample(c("Night Vale Stadium", "Big Rico's Sandlot With The Lot",
                    "Elementary School Playground",
                    "Night Vale Harbor and Waterfront Recreation Area"),
-                 9, replace = T),
+                 9, replace = TRUE),
   game_time_mins = sample(999, 9)
   )
 
 ggplot(tournament, aes(x = teamA, y = teamB, fill = game_time_mins,
                        label = venue)) +
   geom_tile() +
-  geom_fit_text(width = grid::unit(35, "mm"), height = grid::unit(25, "mm"), 
-                min.size = 0, reflow = T, grow = T, colour = "white")
+  geom_fit_text(reflow = TRUE, grow = TRUE, colour = "white")
 ```
