--- a/README.Rmd
+++ b/README.Rmd
@@ -29,12 +29,13 @@ yeats <- data.frame(
   ymin = c(0, 4, 0, 0, 2, 3, 2,   2,   2.5,  2.75, 2.5),
   ymax = c(8, 8, 4, 2, 4, 4, 3,   2.5, 3,    3,    2.75),
   label = c("Turning", "and", "turning", "in", "the", "widening", "gyre", "the",
-            "falcon", "cannot", "hear")
+            "falcon", "cannot", "hear"),
+  angle = c(0, 45, 90, 135, 180, 225, 270, 315, 0, 45, 90)
 )
 library(ggplot2)
 library(ggfittext)
 ggplot(yeats, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, label =
-                  label)) +
+                  label, angle = angle)) +
   geom_rect(colour = "black") +
   geom_fit_text(grow = TRUE, min.size = 0)
 ```
@@ -129,7 +130,7 @@ of any side (‘bottom’, ‘left’, …), as well as the default ‘centre’
 With the `grow = TRUE` argument, text will be made to fill the box completely,
 whether that requires growing or shrinking it.
 
-```{r geom_fit_text_3}
+```{r geom_fit_text_3, fig.height = 8}
 ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin, 
                    ymax = ymax)) +
   geom_rect() +
