--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -23,7 +23,7 @@ fitting text inside a box. It works more or less like `ggplot2::geom_text()`,
 but provides some additional aesthetics and options that let you specify the box
 in which the text is to fit and how to make it fit.
 
-```{r doesnt_fit}
+```{r doesnt_fit, fig.width = 4}
 library(ggplot2)
 library(ggfittext)
 
@@ -65,7 +65,7 @@ You can specify where in the box to place the text with the `place` argument,
 and a minimum point size for the text with the `min.size` argument. (Any text
 that would need to be smaller than `min.size` to fit the box will be hidden.)
 
-```{r geom_fit_text_2}
+```{r geom_fit_text_2, fig.width = 4}
 ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin,
                    ymax = ymax)) + 
   geom_rect() +
@@ -85,7 +85,7 @@ of any side (‘bottom’, ‘left’, …), as well as the default ‘centre’
 With the `grow = TRUE` argument, text will be made to fill the box completely,
 whether that requires growing or shrinking it.
 
-```{r geom_fit_text_3}
+```{r geom_fit_text_3, fig.height = 8}
 ggplot(flyers, aes(label = vehicle, xmin = xmin, xmax = xmax, ymin = ymin, 
                    ymax = ymax)) +
   geom_rect() +
