Fix handling of width and height in polar coordinates

--- a/README.Rmd
+++ b/README.Rmd
@@ -187,9 +187,9 @@ the development version; any bug reports are very welcome.
 
 ```{r, fig.width = 4, fig.height = 4}
 ggplot(gold, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, 
-                 label = label, fill = line)) +
-  geom_rect() +
+                 fill = line, label = label)) +
   coord_polar() +
+  geom_rect() +
   geom_fit_text(min.size = 0, grow = TRUE) +
   scale_fill_gradient(low = "#fee391", high = "#238443")
 ```
