--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -167,8 +167,8 @@ ggplot(animals, aes(x = type, y = flies, fill = mass, label = animal)) +
   text and ascenders, but not any descenders. If TRUE, it extends from the top
   of the ascenders to the bottom of the descenders. This is mostly useful in
   situations where you want to ensure the baseline of text is consistent
-  between labels (`fullheight = TRUE`), or when you want to avoid descenders
-  spilling out of the bounding box (`fullheight = FALSE`).
+  between labels (`fullheight = FALSE`), or when you want to avoid descenders
+  spilling out of the bounding box (`fullheight = TRUE`).
 
 ```{r echo = FALSE, fig.width = 4, fig.height = 0.5}
 ggplot(data.frame(label = "fullheight = TRUE", xmin = 0.25, xmax = 0.75, ymin = 0.25, ymax = 0.75), 
