--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 # ggfittext
 
-ggfittext provides a ggplot2 geom for fitting text into boxes.
+ggfittext provides some ggplot2 geoms for fitting text into boxes.
 
 ```{r hero, echo = FALSE, message = FALSE, fig.width = 8, fig.height = 4}
 yeats <- data.frame(
@@ -79,10 +79,10 @@ devtools::install_github("wilkox/ggfittext")
 ## Fitting text inside a box
 
 Sometimes you want to draw some text in a ggplot2 plot so that it fits inside a
-defined area. It's possible to achieve this by manually fiddling with the font
-size, but this is both tedious and un-reproducible. ggfittext provides a geom
-called `geom_fit_text()` that automatically resizes text to fit inside a box.
-It works like this:
+defined area. You can do this by manually fiddling with the font size, but this
+is tedious and un-reproducible. ggfittext provides a geom called
+`geom_fit_text()` that automatically resizes text to fit inside a box.  It
+works like this:
 
 ```{r, fig.width = 4, fig.height = 4}
 ggplot(animals, aes(x = type, y = flies, label = animal)) +
@@ -91,9 +91,8 @@ ggplot(animals, aes(x = type, y = flies, label = animal)) +
 ```
 
 As with `geom_text()`, the position of the text is set by the `x` and `y`
-aesthetics. `geom_fit_text()` automatically infers the width and height of the
-box in which the text is allowed to fit, and shrinks down any text that is too
-big.
+aesthetics. `geom_fit_text()` tries to infer the width and height of the box in
+which the text is allowed to fit, and shrinks down any text that is too big.
 
 ## Reflowing text
 
@@ -115,7 +114,7 @@ will increase the text size to the maximum that will fit in the box. This works
 well in conjunction with `reflow`:
 
 ```{r, fig.width = 4, fig.height = 4}
-ggplot(animals, aes(x = type, y = flies, fill = mass, label = animal)) +
+ggplot(animals, aes(x = type, y = flies, label = animal)) +
   geom_tile(fill = "white", colour = "black") +
   geom_fit_text(reflow = TRUE, grow = TRUE)
 ```
@@ -124,8 +123,7 @@ ggplot(animals, aes(x = type, y = flies, fill = mass, label = animal)) +
 
 By default, text is placed in the centre of the box. However, you can place it
 in a corner or on a side of the box with the `place` argument, which takes
-values "top", "topright", "right", "bottomright", "bottom", "bottomleft" and so
-on:
+values like "top", "topright", "bottomleft" and so on:
 
 ```{r, fig.width = 4, fig.height = 4}
 ggplot(animals, aes(x = type, y = flies, label = animal)) +
@@ -135,8 +133,8 @@ ggplot(animals, aes(x = type, y = flies, label = animal)) +
 
 ## Bar plots
 
-ggfittext provides a convenience function `geom_bar_text()` for labelling bars
-in bar plots:
+ggfittext also provides a geom `geom_bar_text()` for labelling bars in bar
+plots:
 
 ```{r, fig.width = 4, fig.height = 4}
 ggplot(altitudes, aes(x = craft, y = altitude, label = altitude)) +
@@ -144,19 +142,19 @@ ggplot(altitudes, aes(x = craft, y = altitude, label = altitude)) +
   geom_bar_text()
 ```
 
-`geom_bar_text()` also works with stacked bar plots (`position = "stack"`):
+`geom_bar_text()` works with stacked bar plots:
 
 ```{r, fig.width = 4, fig.height = 4}
-ggplot(coffees, aes(x = coffee, y = proportion, label = ingredient,
+ggplot(beverages, aes(x = beverage, y = proportion, label = ingredient,
                     fill = ingredient)) +
   geom_col(position = "stack") +
-  geom_bar_text(position = "stack", grow = TRUE, reflow = TRUE)
+  geom_bar_text(position = "stack", reflow = TRUE)
 ```
 
-And with dodged bar plots, and `coord_flip()`:
+And it works with dodged bar plots, and with flipped bar plots:
 
 ```{r, fig.width = 4, fig.height = 4}
-ggplot(coffees, aes(x = coffee, y = proportion, label = ingredient,
+ggplot(beverages, aes(x = beverage, y = proportion, label = ingredient,
                     fill = ingredient)) +
   geom_col(position = "dodge") +
   geom_bar_text(position = "dodge", grow = TRUE, reflow = TRUE, 
@@ -164,9 +162,9 @@ ggplot(coffees, aes(x = coffee, y = proportion, label = ingredient,
   coord_flip()
 ```
 
-## Specifying the box coordinates
+## Specifying the box limits
 
-If you want to manually set the edges of the box (instead of having them
+If you want to manually set the limits of the box (instead of having them
 inferred from `x` and `y`), you can use `xmin` & `xmax` and/or `ymin` & `ymax`:
 
 ```{r, fig.width = 4, fig.height = 4}
@@ -182,12 +180,12 @@ and/or vertical centre of the box will be defined by `x` and/or `y`.
 ## Experimental feature: text in polar coordinates
 
 Text can be drawn in polar coordinates with `geom_fit_text()` simply by adding
-`coord_polar()` to the plot. This feature is experimental and currently only in
-the development version; any bug reports are very welcome.
+`coord_polar()` to the plot. This feature is experimental and any bug reports
+are very welcome.
 
 ```{r, fig.width = 4, fig.height = 4}
 ggplot(gold, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, 
-                 fill = line, label = label)) +
+                 fill = linenumber, label = line)) +
   coord_polar() +
   geom_rect() +
   geom_fit_text(min.size = 0, grow = TRUE) +
@@ -216,14 +214,14 @@ ggplot(animals, aes(x = type, y = flies, fill = mass, label = animal)) +
   that is placed at "top", "bottom", "left" or "right" and must be shrunk
   smaller than `min.size` to fit in the box will be flipped to the outside of
   the box (if it fits there). This is mostly useful for drawing text inside
-  bars in a bar plot, so it is `TRUE` by default for `geom_bar_text()` when
-  `position = "stacked"`.
+  bars in a bar plot.
 - **`hjust`** and **`vjust`** set the horizontal and vertical justification of
   the text, scaled between 0 (left/bottom) and 1 (right/top). These are both
   0.5 by default.
-- **`formatter`** allows you to set a function that will be applied to the text
-  before it is drawn. This is mostly useful in contexts where variables may be
-  interpolated, such as when using [gganimate](http://www.gganimate.com).
+- **`formatter`** allows you to provide a function that will be applied to the
+  text before it is drawn. This is mostly useful in contexts where variables
+  may be interpolated, such as when using
+  [gganimate](http://www.gganimate.com).
 - **`fullheight`** is automatically set depending on place, but can be
   overridden with this option. This is used to determine the bounding box
   around the text. If `FALSE`, the bounding box includes the x-height of the
